Fixed footer spacing issue used clr class instead of clearfix.

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -11,7 +11,7 @@ body {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -$footer-height;
+  margin: 0 auto (-$footer-height);
   /* Pad bottom by footer height */
   padding: 0 0 $footer-height;
 }
@@ -29,4 +29,8 @@ body {
 #footer a {
   color: white;
   font-weight: 100;
+}
+
+.clr {
+  clear:both;
 }
